--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
 
-	<title>Minutes | Responsive Multipurpose Landing Page</title>
+	<title>Chung cư Him Lam Thượng Thanh, Long Biên - Chính sách &amp Giá bán</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
@@ -68,6 +68,18 @@
 		ul, ol, li {
 			list-style: disc; 
 		}
+		@media only screen and (max-width: 767px) and (min-width: 250px) {
+			p {
+				font-size: 14px;
+				line-height: 24px;
+			}
+		}
+		.icon-box p {
+			font-size: 14px;
+		}
+		.icon-box h4 {
+			font-size: 16px;
+		}
 	</style>
 
 </head>
@@ -81,7 +93,7 @@
 			<div class="container">
 				<div class="navbar-header pull-left">
 					<!-- Logo -->
-					<a class="navbar-brand" href="#">Him Lam</a>
+					<a class="navbar-brand" href="tel:0976504122">0976 504 122</a>
 				</div>
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 				<span class="icon-bar"></span>
@@ -103,7 +115,7 @@
 						<li><a class="page-scroll" href="#tien-ich">Tiện ích</a></li>
 						<li><a class="page-scroll" href="#mat-bang">Mặt bằng</a></li>
 						<li><a class="page-scroll" href="#gia-ban-va-chinh-sach">Giá bán &amp; chính sách</a></li>
-						<li><a class="page-scroll" href="#contact">Liên hệ</a></li>
+						<li><a class="page-scroll" href="#lien-he">Liên hệ</a></li>
 					</ul>
 				</div>
 			</div>
@@ -126,30 +138,6 @@
 		</div>
 	</div>
 	<!-- INTRO HEAD -->
-
-	<!-- CLIENTS -->
-	<div class="clients">
-		<div class="container">
-			<div class="row text-center">
-				<div class="col-md-2">
-					<img class="center-block" src="images/clients/1.png" alt="">
-				</div>
-				<div class="col-md-2">
-					<img class="center-block" src="images/clients/2.png" alt="">
-				</div>
-				<div class="col-md-2">
-					<img class="center-block" src="images/clients/3.png" alt="">
-				</div>
-				<div class="col-md-2">
-					<img class="center-block" src="images/clients/4.png" alt="">
-				</div>
-				<div class="col-md-2">
-					<img class="center-block" src="images/clients/5.png" alt="">
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- CLIENTS -->
 
 	<!-- SERVICES -->
 	<div class="service-content" id="tong-quan">
@@ -313,304 +301,53 @@
 	</div>
 	<!-- DUAL CONTENT -->
 
+	<!-- DUAL CONTENT -->
+	<div class="service-content" id="mat-bang">
+		<div class="container">
+			<h2>MẶT BẰNG</h2>
+			<p>Him Lam Thượng Thanh được xây dựng với quy mô 1 tòa tháp cao 2 tầng, với 2 tầng hầm và 2 tầng trung tâm thương mại. Tòa tháp A sẽ được dành phần đế cho khu trung tâm thương mại và văn phòng hiện đại, khoảng tầng trên của dự án sẽ là khu căn hộ sang trọng và đẳng cấp bậc nhất Thủ đô trong tương lai.</p>
+			<p>Không những thế, tại Nhà ở xã hội Him Lam Thượng Thanh tất cả các căn hộ đều là căn góc, sở hữu mặt bằng căn hộ vuông vắn, tối đa hóa công năng sử dụng và trên hết, 50% căn hộ có 2 đến 3 mặt thoáng với tầm view rộng mở.</p>
+			<div class="text-center">
+				<img style="margin: 0 auto;" src="images/chung-cu-thuong-thanh-10.jpg" class="img-responsive" />
+			</div>
+		</div>
+	</div>
+	<!-- DUAL CONTENT -->
+
+	<!-- DUAL CONTENT -->
+	<div class="service-content" id="gia-ban-va-chinh-sach">
+		<div class="container">
+			<h2>GIÁ BÁN &amp; CHÍNH SÁCH</h2>
+			<h3>TIẾN ĐỘ THANH TOÁN DỰ ÁN</h3>
+			<p style="font-size: 18px; margin: 15px 0; color: #E91E63;">Dự án nhà ở xã hội him lam thượng thanh được chia làm 7 đợt:</p>
+			<ul>
+				<li><strong>Giai đoạn 1</strong>: thanh toán 30% khi ký hợp đồng mua bán;</li>
+				<li><strong>Giai đoạn 2</strong>: thanh toán 15% khi xây xong tầng 4;</li>
+				<li><strong>Giai đoạn 3</strong>: thanh toán 15% khi xây xong tầng 9;</li>
+				<li><strong>Giai đoạn 4</strong>: thanh toán 15% khi xây xong tầng 14;</li>
+				<li><strong>Giai đoạn 5</strong>: thanh toán 15% khi cất nóc;</li>
+				<li><strong>Giai đoạn 6</strong>: thanh toán 15% khi bàn giao căn hộ;</li>
+				<li><strong>Giai đoạn 7</strong>: thanh toán 5% khi nhận sổ Chứng nhận quyền sử dụng căn hộ.</li>
+			</ul>
+			<p class="text-center" style="font-size: 18px; margin: 35px 0; color: #E91E63;">NGÂN HÀNG HỖ TRỢ VAY 70% TỔNG GIÁ TRỊ CĂN HỘ THỜI GIAN VAY LÊN ĐẾN 20 NĂM</p>
+		
+			<h2 class="text-center" style="margin: 35px 0; color: #E91E63;">GIÁ BÁN CĂN HỘ DỰ KIẾN 16tr/m2 ĐÃ BAO GỒM VAT</h2>
+		</div>
+	</div>
+	<!-- DUAL CONTENT -->
+
 		<!-- DUAL CONTENT -->
-		<div class="service-content" id="mat-bang">
+		<div class="service-content" id="lien-he">
 			<div class="container">
-				<h2>MẶT BẰNG</h2>
-				<p>Him Lam Thượng Thanh được xây dựng với quy mô 1 tòa tháp cao 2 tầng, với 2 tầng hầm và 2 tầng trung tâm thương mại. Tòa tháp A sẽ được dành phần đế cho khu trung tâm thương mại và văn phòng hiện đại, khoảng tầng trên của dự án sẽ là khu căn hộ sang trọng và đẳng cấp bậc nhất Thủ đô trong tương lai.</p>
-				<p>Không những thế, tại Nhà ở xã hội Him Lam Thượng Thanh tất cả các căn hộ đều là căn góc, sở hữu mặt bằng căn hộ vuông vắn, tối đa hóa công năng sử dụng và trên hết, 50% căn hộ có 2 đến 3 mặt thoáng với tầm view rộng mở.</p>
-				<div class="text-center">
-					<img src="images/chung-cu-thuong-thanh-10.jpg" />
+				<h2>LIÊN HỆ</h2>
+				<p>Trong thời gian tới, chúng tôi sẽ liên tục cập nhật những thông tin mới nhất về tiến độ thi công dự án Him Lam Thượng Thanh. Quý khách hàng liên hệ với chúng tôi để được nhận Thông tin chính thức, Thời gian mở bán và Bảng hàng dự án mới nhất….</p>
+				<div class="text-center" style="margin-top: 50px;">
+					<a href="tel:0976504122" class="btn btn-default">Liên hệ ngay: 0976 504 122</a>
 				</div>
 			</div>
 		</div>
 		<!-- DUAL CONTENT -->
 
-	<!-- INFO CONTENT -->
-	<div class="info-content" id="lien-he">
-		<div class="container">
-			<div class="row center-content">
-				<div class="col-md-7 col-md-push-5">
-					<img src="images/2.png" class="img-responsive" alt="">
-				</div>
-
-				<div class="col-md-5 col-md-pull-7">
-					<h4>Liên hệ</h4>
-					<p>Trong thời gian tới, chúng tôi sẽ liên tục cập nhật những thông tin mới nhất về tiến độ thi công dự án Him Lam Thượng Thanh. Quý khách hàng liên hệ với chúng tôi để được nhận Thông tin chính thức, Thời gian mở bán và Bảng hàng dự án mới nhất….</p>
-					<a href="tel:0976504122" class="btn btn-default">Hotline: 0976 504 122</a>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- INFO CONTENT -->
-
-	<!-- FEATURES -->
-	<section class="feature-content" id="features">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 content-head-lite text-center">
-					<h2>LIE</h2>
-					<p>Suspendisse egestas mattis rhoncus pellen tesque euismod erat at sed do eiusmod tempor posuere molestie lorem lectus interdum augue</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-4 fc-inner">
-					<div class="fc-thumb">
-						<img src="images/other/2.jpg" class="img-responsive" alt="">
-					</div>
-					<h4>Marketing Concepts</h4>
-					<p>Sed commodo suscipit neque et libero sed finibus. Morbi elit nulla, rutrum eu nulla eu, lacinia tincidunt ligula. </p>
-					<a href="#" class="btn btn-default btn-xs">Learn More <i class="fa fa-long-arrow-right"></i></a>
-				</div>
-				<div class="col-md-4 fc-inner">
-					<div class="fc-thumb">
-						<img src="images/other/3.jpg" class="img-responsive" alt="">
-					</div>
-					<h4>Device Optimized</h4>
-					<p>Sed commodo suscipit neque et libero sed finibus. Morbi elit nulla, rutrum eu nulla eu, lacinia tincidunt ligula. </p>
-					<a href="#" class="btn btn-default btn-xs">Learn More <i class="fa fa-long-arrow-right"></i></a>
-				</div>
-				<div class="col-md-4 fc-inner">
-					<div class="fc-thumb">
-						<img src="images/other/4.jpg" class="img-responsive" alt="">
-					</div>
-					<h4>Target Audience</h4>
-					<p>Sed commodo suscipit neque et libero sed finibus. Morbi elit nulla, rutrum eu nulla eu, lacinia tincidunt ligula. </p>
-					<a href="#" class="btn btn-default btn-xs">Learn More <i class="fa fa-long-arrow-right"></i></a>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- FEATURES -->
-
-	<!-- TESTIMONIALS -->
-	<div class="testimonials" id="testimonials">
-		<div class="container">
-			<div class="row">
-				<div class="content-head space60 text-center">
-					<h2>What our clients say</h2>
-					<p>Suspendisse egestas mattis rhoncus pellen tesque euismod erat at sed do eiusmod tempor posuere molestie lorem lectus interdum augue</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="quote-slider">
-					<div class="quote-item">
-						<div class="quote-info">
-							<p class="quote">It's iaculis lectus sed mattis nibh phasellus iaculis pulvinar purus vitae ligula interdum at mattis dui sodales non neque sit amet enim</p>
-							<div class="author">
-								<img class="author-avatar" src="images/quote/1.jpg" height="48" width="48" alt="" />
-								<div class="author-info">
-									<div class="name">Joseph Doe</div>
-									<div class="company">@company</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="quote-item">
-						<div class="quote-info">
-							<p class="quote">It's iaculis lectus sed mattis nibh phasellus iaculis pulvinar purus vitae ligula interdum at mattis dui sodales non neque sit amet enim</p>
-							<div class="author">
-								<img class="author-avatar" src="images/quote/2.jpg" height="48" width="48" alt="" />
-								<div class="author-info">
-									<div class="name">Stephen Doe</div>
-									<div class="company">@company</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="quote-item">
-						<div class="quote-info">
-							<p class="quote">It's iaculis lectus sed mattis nibh phasellus iaculis pulvinar purus vitae ligula interdum at mattis dui sodales non neque sit amet enim</p>
-							<div class="author">
-								<img class="author-avatar" src="images/quote/1.jpg" height="48" width="48" alt="" />
-								<div class="author-info">
-									<div class="name">Mary Christopher</div>
-									<div class="company">@company</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="quote-item">
-						<div class="quote-info">
-							<p class="quote">It's iaculis lectus sed mattis nibh phasellus iaculis pulvinar purus vitae ligula interdum at mattis dui sodales non neque sit amet enim</p>
-							<div class="author">
-								<img class="author-avatar" src="images/quote/2.jpg" height="48" width="48" alt="" />
-								<div class="author-info">
-									<div class="name">Joseph Doe</div>
-									<div class="company">@company</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- TESTIMONIALS -->
-
-	<!-- PRICING -->
-	<div class="pricing bg-gray" id="pricing">
-		<div class="container">
-			<div class="content-head space60 text-center">
-				<h2>Choose your best plan</h2>
-				<p>Suspendisse egestas mattis rhoncus pellen erat at sed do eiusmod tempor<br>posuere molestie lorem lectus interdum augue</p>
-			</div>
-		</div>
-
-		<div class="container">
-			<div class="row">
-				<!-- Pricing Plan - 1 -->
-				<div class="col-md-3">
-					<div class="panel panel-default text-center">
-						<div class="panel-heading">
-							<strong>Basic</strong>
-						</div>
-						<div class="panel-body">
-							<h3 class="panel-title price">$9<span class="price-cents">99</span></h3>
-						</div>
-						<ul class="list-group">
-							<li class="list-group-item">5 Projects</li>
-							<li class="list-group-item">5 GB of Storage</li>
-							<li class="list-group-item">Up to 100 Users</li>
-							<li class="list-group-item">10 GB Bandwidth</li>
-							<li class="list-group-item">Security Suite</li>
-						</ul>
-						<a class="buy-btn" href="#">Sign Up Now!</a>
-					</div>
-				</div>
-
-				<!-- Pricing Plan - 2 -->
-				<div class="col-md-3">
-					<div class="panel panel-default text-center">
-						<div class="panel-heading">
-							<strong>Standard</strong>
-						</div>
-						<div class="panel-body">
-							<h3 class="panel-title price">$19<span class="price-cents">99</span></h3>
-						</div>
-						<ul class="list-group">
-							<li class="list-group-item">10 Projects</li>
-							<li class="list-group-item">10 GB of Storage</li>
-							<li class="list-group-item">Up to 250 Users</li>
-							<li class="list-group-item">25 GB Bandwidth</li>
-							<li class="list-group-item">Security Suite</li>
-						</ul>
-						<a class="buy-btn" href="#">Sign Up Now!</a>
-					</div>
-				</div>
-
-				<!-- Pricing Plan - 3 -->
-				<div class="col-md-3">
-					<div class="panel panel-default active text-center">
-						<i class="ti-cup"></i>
-						<div class="panel-heading">
-							<strong>Premium</strong>
-						</div>
-						<div class="panel-body">
-							<h3 class="panel-title price">$29<span class="price-cents">99</span></h3>
-						</div>
-						<ul class="list-group">
-							<li class="list-group-item">Unlimited</li>
-							<li class="list-group-item">50 GB of Storage</li>
-							<li class="list-group-item">Up to 1000 Users</li>
-							<li class="list-group-item">100 GB Bandwidth</li>
-							<li class="list-group-item">Security Suite</li>
-						</ul>
-						<a class="buy-btn" href="#">Sign Up Now!</a>
-					</div>
-				</div>
-
-				<!-- Pricing Plan - 4 -->
-				<div class="col-md-3">
-					<div class="panel panel-default text-center">
-						<div class="panel-heading">
-							<strong>Ultimate</strong>
-						</div>
-						<div class="panel-body">
-							<h3 class="panel-title price">$49<span class="price-cents">99</span></h3>
-						</div>
-						<ul class="list-group">
-							<li class="list-group-item">Unlimited</li>
-							<li class="list-group-item">150 GB of Storage</li>
-							<li class="list-group-item">Unlimited</li>
-							<li class="list-group-item">500 GB Bandwidth</li>
-							<li class="list-group-item">Security Suite</li>
-						</ul>
-						<a class="buy-btn" href="#">Sign Up Now!</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- PRICING -->
-
-	<!-- CALL TO ACTION -->
-	<div class="cta-content">
-		<div class="container">
-			<div class="row text-center">
-				<div class="col-md-8 col-md-offset-2">
-					<i class="ti-shopping-cart head-ico"></i>
-					<h3>Are you impressed ?</h3>
-					<p class="space30">Lorem ipsum dolor sit amet curabitur eu dapibus felis. Morbi ut dolor ut mi ultricies lobortis.<br>Morbi et viverra turpis. Donec cursus ornare purus nec porttitor.</p>
-					<a href="#" class="btn btn-ico">Download Minutes Now <i class="ti-shopping-cart"></i></a>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- CALL TO ACTION -->
-
-	<!-- FOOTER -->
-	<footer>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4">
-					<h1 class="footer-logo"><a href="index.html">Minutes</a></h1>
-					<p>Lorem ipsum dolor sit amet consectetur adipiscing elit rhoncus tempus perdiet risus sit amet volutpat.</p>
-					<ul class="footer-social">
-						<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-						<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-						<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-						<li><a href="#"><i class="fa fa-instagram"></i></a></li>
-					</ul>
-				</div>
-				<div class="col-md-4">
-					<h4>Related Links</h4>
-					<div class="row">
-						<div class="col-md-6">
-							<ul class="footer-list">
-								<li><a href="#">About Us</a></li>
-								<li><a href="#">Testimonials</a></li>
-								<li><a href="#">Our Team</a></li>
-								<li><a href="#">Contact Us</a></li>
-							</ul>
-						</div>
-						<div class="col-md-6">
-							<ul class="footer-list">
-								<li><a href="#">Register</a></li>
-								<li><a href="#">Forum</a></li>
-								<li><a href="#">Affiliate</a></li>
-								<li><a href="#">FAQ</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<h4>Payment Methods</h4>
-					<ul class="footer-payment">
-						<li><a href="#"><img src="images/payment/1.png" alt=""></a></li>
-						<li><a href="#"><img src="images/payment/2.png" alt=""></a></li>
-						<li><a href="#"><img src="images/payment/3.png" alt=""></a></li>
-						<li><a href="#"><img src="images/payment/5.png" alt=""></a></li>
-					</ul>
-					<br>
-					<p>&copy; 2016. Minutes. All Rights Reserved.<br>Designed, developed &amp; Maintained by diilpkumar</p>
-				</div>
-			</div>
-		</div>
-	</footer>
-	<!-- FOOTER -->
 </div>
 
 <!-- JAVASCRIPT =============================-->
