--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 				</div>
 				<div class="col-md-5">
 					<div style="padding: 20px;">
-						<h4>Vị trí</h4>
+						<h4>VỊ TRÍ</h4>
 						<p>Him Lam Thượng Thanh tọa lạc tại phường Thượng Thanh, quận Long Biên, TP Hà Nội, tổ hợp dự án cao cấp kết hợp giữa căn hộ hạng sang – trung tâm thương mại, trường học và khu văn phòng. Là sản phẩm sáng tạo, là sự kết tinh giữa vị trí vàng – thiết kế hoàn hảo – tiện ích sống – và cảm hứng sáng tạo.</p>
 						<ul>
 							<li>Phía Đông tiếp giáp trục đường Cầu Chui – Đông Trù và khu dân cư phường Thượng Thanh.</li>
