--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			}
 			.story-padding {
 				padding-top: 50px;
-				padding-bottom: 0;
+				padding-bottom: 20px;
 			}
 			.hero__caption {
 				text-shadow: 2px 7px 5px rgba(0,0,0,0.3), 0px -4px 10px rgba(255,255,255,0.3);
@@ -69,6 +69,9 @@
 			.slider-height {
 				height: 680px;
 			}
+            .section-tittle img {
+                margin-bottom: 30px;
+            }
 		</style>
     </head>
     <body>
@@ -153,8 +156,8 @@
                             <div class="section-tittle text-center mb-70">
                                 <h2>Giới thiệu​</h2>
                                 <img src="assets/img/gallery/tittle_img.png" alt="">
-                                <p>Chung cư - Nhà ở xã hội Him Lam Thượng Thanh nằm ở cửa ngõ phía Đông Hà Nội, là trung tâm giao thương huyết mạch phía Đông Hà Nội với các tỉnh Hải Phòng, Quảng Ninh, Hải Dương, Bắc Giang, Bắc Ninh, Lạng Sơn thông qua quốc lộ 5 và quốc lộ 1. Dự án cách cầu Chương Dương khoảng 3km. Từ dự án cư dân có thể tiếp cận di chuyển vào nội thành chỉ mất 5 – 10 phút lái xe. 
-                                </p>
+                                <p><strong>Chung cư Him Lam Thượng Thanh</strong> là dự án trọng tâm của chủ đầu tư Công ty CP Him Lam Thủ Đô được quy hoạch xây dựng một cách hệ thống là tổ hợp khu nhà ở và thương mại dịch vụ hiện đại, đồng bộ hạ tầng kỹ thuật, hạ tầng phù hợp với nhu cầu sử dụng cho dự án nhà ở xã hội và phục vụ cộng đồng dân cư khu vực.</p>
+                                <p>Dự án góp phần thúc đẩy sự phát triển kinh tế – xã hội của phường Thượng Thanh trong quận Long Biên và thành phố Hà Nội. <strong>Chung cư Him Lam</strong> tạo bộ mặt kiến trúc đô thị khang trang, hiện đại đóng góp vào cảnh quan kiến trúc chung của khu vực quận Long Biên.</p>
                             </div>
                         </div>
                     </div>
@@ -186,11 +189,15 @@
             <section class="pricing-card-area section-bg" id="vi-tri">
                 <div class="container">
                     <div class="row d-flex justify-content-center">
-                        <div class="col-lg-8">
+                        <div class="col-lg-12">
                             <div class="section-tittle text-center mb-70">
                                 <h2>Vị trí</h2>
                                 <img src="assets/img/gallery/tittle_img.png" alt="">
-                                <p>Quisque nec facilisis sem. In at commodo velit. Aliquam tempor volutpat laoreet. Quisque non tellus eleifend arcu gravida aliquam. Vivamus quis consequat nisl</p>
+                                <p class="text-center">
+                                    Chung cư - Nhà ở xã hội Him Lam Thượng Thanh nằm ở cửa ngõ <strong>phía Đông Hà Nội</strong>,  
+                                    là trung tâm giao thương huyết mạch phía Đông Hà Nội với các tỉnh <strong>Hải Phòng- Quảng Ninh - Hải Dương - Bắc Giang - Bắc Ninh - Lạng Sơn</strong> thông qua <strong>quốc lộ 5</strong> và <strong>quốc lộ 1</strong>. <br>
+                                    Chung cư Him Lam Thượng Thanh cách <strong>cầu Chương Dương</strong> khoảng <strong>3km</strong>. Từ dự án cư dân có thể tiếp cận di chuyển vào nội thành chỉ mất <strong>5 – 10 phút</strong> lái xe.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -297,11 +304,20 @@
 			<section class="pricing-card-area section-bg" id="mat-bang" style="margin-top: 50px;">
                 <div class="container">
                     <div class="row d-flex justify-content-center">
-                        <div class="col-lg-8">
+                        <div class="col-lg-10">
                             <div class="section-tittle text-center mb-70">
                                 <h2>Mặt bằng</h2>
                                 <img src="assets/img/gallery/tittle_img.png" alt="">
-                                <p>Quisque nec facilisis sem. In at commodo velit. Aliquam tempor volutpat laoreet. Quisque non tellus eleifend arcu gravida aliquam. Vivamus quis consequat nisl</p>
+                                <p>
+                                    Được thiết kế linh hoạt đầy đủ loại hình căn hộ từ 1 ngủ - 2 ngủ - 3 ngủ. Diện tích từ <strong>37 – 77m2</strong>.
+                                    Tất cả các căn hộ ở <strong>chung cư Nhà ở xã hội Thượng Thanh</strong> với thiết kế đều là căn góc, đều được hưởng những điều tuyệt vời nhất của một căn hộ chung cư với các phòng ngủ tràn đầy ánh sáng.
+                                </p>
+                                <p>
+                                    Tầng 1 được thiết kế trung tâm thương mại, văn phòng, đầy đủ các tiện ích như: Gym, Spa, Siêu thị mua sắm, Trường mầm non…
+                                </p>
+                                <p>
+                                    Gồm 44 lô liền kề <strong>shophouse</strong> là tuyến phố trung tâm mua bán – kinh doanh sầm uất nhất khu vực.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -314,11 +330,15 @@
 			<section class="pricing-card-area section-bg" id="tien-ich" style="margin-top: 50px;">
                 <div class="container">
                     <div class="row d-flex justify-content-center">
-                        <div class="col-lg-8">
+                        <div class="col-lg-10">
                             <div class="section-tittle text-center mb-70">
                                 <h2>Tiện ích</h2>
                                 <img src="assets/img/gallery/tittle_img.png" alt="">
-                                <p>Quisque nec facilisis sem. In at commodo velit. Aliquam tempor volutpat laoreet. Quisque non tellus eleifend arcu gravida aliquam. Vivamus quis consequat nisl</p>
+                                <p>
+                                    <strong>Nhà ở xã hội Thượng Thanh</strong> có thiết kế với không gian mở và đề cao sự gần gũi với thiên nhiên, đồng thời đảm bảo các căn hộ đều có không gian view thoáng rộng để có thể đón bầu không khí trong lành, mát mẻ.
+                                </p>
+                                <p>                                    Hệ thống cơ sở hạ tầng trong dự án đều được được thiết kế và lắp đặt đồng bộ, hiện đại và đảm bảo đáp ứng theo các tiêu chuẩn kỹ thuật hiện đại và an toàn nhất hiện nay..</p>
+                                <p>Bên cạnh đó, nội khu dự án cũng chứa đựng rất nhiều tiện ích phong phú khác như: Hệ thống trường liên cấp quốc tế từ mầm non đến THPT, sân thể thao dạo bộ ngoài trời, công viên cây xanh, vườn vui chơi trẻ em, bể bơi ngoài trời 500m2, vườn nướng BBQ ngoài trời, gym, spa hiện đại, trung tâm thương mại, phòng khám đa khoa.</p>
                             </div>
                         </div>
                     </div>
@@ -356,11 +376,11 @@
 			<section class="pricing-card-area section-bg" id="tien-do" style="margin-top: 50px;">
                 <div class="container">
                     <div class="row d-flex justify-content-center">
-                        <div class="col-lg-8">
+                        <div class="col-lg-10">
                             <div class="section-tittle text-center mb-70">
                                 <h2>Tiến độ thanh toán</h2>
                                 <img src="assets/img/gallery/tittle_img.png" alt="">
-                                <p>Quisque nec facilisis sem. In at commodo velit. Aliquam tempor volutpat laoreet. Quisque non tellus eleifend arcu gravida aliquam. Vivamus quis consequat nisl</p>
+                                <p>Tiến độ thanh toán linh hoạt chia làm <strong>7 đợt</strong> được giải ngân theo tiến độ tòa nhà. Hơn nữa, chỉ cần <strong>30% vốn</strong> tự có Khách hàng được Ngân hàng <strong>hỗ trợ cho vay 70%</strong> giá trị căn hộ với <strong>lãi suất ưu đãi</strong>.</p>
                             </div>
                         </div>
                     </div>
@@ -377,7 +397,7 @@
                             <div class="section-tittle text-center mb-80">
                                 <h2>Liên hệ 0976.504.122</h2>
                                 <img src="assets/img/gallery/tittle_img.png" alt="">
-                                <p>Quisque nec facilisis sem. In at commodo velit. Aliquam tempor volutpat laoreet. Quisque non tellus eleifend arcu gravida aliquam. Vivamus quis consequat nisl</p>
+                                <p>Để cập nhật thông tin tiến độ dự án , giải đáp thắc mắc , hướng dẫn thủ tục mua nhà - làm hồ sơ. Quý Khách hàng vui lòng để lại thông tin để được nhân viên gọi lại sớm nhất.</p>
                             </div>
                         </div>
                     </div>
@@ -441,62 +461,6 @@
         </main>
         <footer>
             <div class="footer-main" data-background="assets/img/gallery/section_bg4.png">
-                <div class="footer-area footer-padding">
-                    <div class="container">
-                        <div class="row d-flex justify-content-between">
-                            <div class="col-xl-2  col-lg-3 col-md-5 col-sm-6">
-                                <div class="single-footer-caption mb-50">
-                                    <div class="single-footer-caption mb-30">
-                                        <div class="footer-logo">
-                                            <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xl-3  col-lg-3 col-lg-2 col-md-5 col-sm-6">
-                                <div class="single-footer-caption mb-50">
-                                    <div class="footer-tittle">
-                                        <h4>WEDDING INFO</h4>
-                                        <ul>
-                                            <li><a href="#">Why Hire a Planner?</a></li>
-                                            <li><a href="#">How Can I Make An</a></li>
-                                            <li><a href="#">Appointment?</a></li>
-                                            <li><a href="#">How to Choose a Venue</a></li>
-                                            <li><a href="#">Event Catalogue</a></li>
-                                            <li><a href="#"> Accept</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xl-2  col-lg-3 col-md-5 col-sm-6">
-                                <div class="single-footer-caption mb-50">
-                                    <div class="footer-tittle">
-                                        <h4>ABOUT US</h4>
-                                        <ul>
-                                            <li><a href="#">Bridesmaids</a></li>
-                                            <li><a href="#">November 22, 2020</a></li>
-                                            <li><a href="#">Groomsmen</a></li>
-                                            <li><a href="#">Groomsmen</a></li>
-                                            <li><a href="#">November 22, 2020</a></li>
-                                            <li><a href="#">JEWELRY</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xl-2  col-lg-3 col-md-5 col-sm-6">
-                                <div class="single-footer-caption mb-50">
-                                    <div class="footer-tittle">
-                                        <h4>LOCATION</h4>
-                                        <ul>
-                                            <li><a href="#">Coloelib.com</a></li>
-                                            <li>+(123) 456 - 7890 - 456 35 W 46nd Street NY</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <div class="footer-bottom-area">
                     <div class="container">
                         <div class="footer-border">
@@ -504,7 +468,7 @@
                                 <div class="col-xl-12 ">
                                     <div class="footer-copy-right text-center">
                                         <p>
-                                            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                                            Copyright &copy;<script>document.write(new Date().getFullYear());</script> Him Lam Thượng Thanh - Long Biên - Hà Nội</a>
                                         </p>
                                     </div>
                                 </div>
